--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,8 @@
 @import "tailwindcss";
 
 html, body, #root {
-  height: 100%;
+  min-height: 100%;
   width: 100%;
-  overflow: hidden;
 }
 
 body {
